--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,7 +35,18 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.6
+  google_fonts: ^6.2.1
+  provider: ^6.1.2
+  firebase_core: ^3.4.0
+  firebase_auth: ^5.2.0
+  sign_in_button: ^3.2.0
+  google_sign_in: ^6.2.2
+  hive: ^2.2.3
+  hive_flutter: ^1.1.0
+  shared_preferences: ^2.2.3
+  
 
+  
 dev_dependencies:
   flutter_test:
     sdk: flutter
@@ -46,6 +57,8 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^3.0.0
+  hive_generator: ^2.0.1
+  build_runner: ^2.4.9
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
