--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,10 +41,11 @@ dependencies:
   firebase_auth: ^5.2.0
   sign_in_button: ^3.2.0
   google_sign_in: ^6.2.2
-  hive: ^2.2.3
-  hive_flutter: ^1.1.0
   shared_preferences: ^2.2.3
   lottie: ^3.1.3
+  
+  flutter_local_notifications: ^18.0.1
+  flutter_datetime_picker: ^1.5.1
   
 
   
