--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,7 +45,9 @@ dependencies:
   lottie: ^3.1.3
   
   flutter_local_notifications: ^18.0.1
-  flutter_datetime_picker: ^1.5.1
+  
+  timezone: ^0.10.0
+  flutter_datetime_picker_plus: ^2.2.0
   
 
   
